# rikka

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: issue-templateはこれに従ってください.md
.github/workflows/: assign-author.yml  ci.yml
input/10steps_stride_length_check_1m-1/: Accelerometer.csv  Gyroscope.csv
input/10steps_stride_length_check_1m-2/: Accelerometer.csv  Gyroscope.csv
input/10steps_stride_length_check_1m-3/: Accelerometer.csv  Gyroscope.csv
input/10steps_stride_length_check_50cm-1/: Accelerometer.csv  Gyroscope.csv
input/10steps_stride_length_check_50cm-2/: Accelerometer.csv  Gyroscope.csv
input/10steps_stride_length_check_50cm-3/: Accelerometer.csv  Gyroscope.csv
input/10steps_stride_length_check_80cm-1/: Accelerometer.csv  Gyroscope.csv
input/10steps_stride_length_check_80cm-2/: Accelerometer.csv  Gyroscope.csv
input/10steps_stride_length_check_80cm-3/: Accelerometer.csv  Gyroscope.csv
input/14号5階内種研から伊藤研前を通るデータ/: Accelerometer.csv  Gyroscope.csv  walk_trace (1).csv
input/14号5階内種研から山本研前を通るデータ/: 正解？データ.csv  正解？データ.numbers
input/14号5階内種研から広場のホワイトボード前で5秒停止してテレビ前を通るデータ/: walk_trace (2).csv  walk_trace (2).numbers
input/54Ito_Kaji/: Accelerometer.csv  Gyroscope.csv
input/85random_steps_turn_Yamamoto/: Accelerometer.csv  Gyroscope.csv
input/87steps_turn_Yamamoto/: Accelerometer.csv  Gyroscope.csv
input/90steps_turn_elevator/: Accelerometer.csv  Gyroscope.csv
input/90steps_turn_elevator2/: Accelerometer.csv  Gyroscope.csv
input/Uchitane_to_Yamamoto_5floor/: Ground_truth.csv
input/Uchitane_to_whiteboard_5floor/: walk_trace (2).csv
input/ryuki_10steps_stride_length_check_1m-1/: Accelerometer.csv  Gyroscope.csv
input/ryuki_step/: Accelerometer.csv  Gyroscope.csv
input/sidestep1/: Accelerometer.csv  Gyroscope.csv
input/sidestep2/: Accelerometer.csv  Gyroscope.csv
input/stride_length-1m_turn_Yamamoto/: Accelerometer.csv  Gyroscope.csv
input/エレベータ前で曲がる90歩/: Accelerometer.csv  Gyroscope.csv
input/山本研前で曲がる90歩/: Accelerometer.csv  Gyroscope.csv
src/rikka/: __init__.py  config.py  main.py  particle_filter.py  pdr.py  ping.py  sensor_plot.py  server.py
tests/: test_pdr_regressions.py  test_smoke.py
(+34 files in other folders)
